tests/NormalTests/paczka1/fuzzy1/70059619.err
Error in line 6: BFcC2oq1IBZ A815 18,4
Error in line 14: S332 A859 20,7
Error in line 17: ë332 ë332 29,9
Error in line 20: lcrT0Wl A859 41,4
Error in line 15: S332 S332 17,7
Error in line 31: S332 A898 29,4
